# simple-llm-eval

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  NOTICES.txt  PROJECT_ANALYSIS.md  README.md  SECURITY.md  index.html  main.py  mkdocs.yml  project-help.md  pyproject.toml  requirements.txt  version.json  versions.json
.config/: .coveragerc  .flake8  .isort.cfg  .pre-commit-config.yaml  .pylintrc
.github/: dependabot.yml  labeler.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug-report-🐞.md  bug_report.md  cicd-issue-⚡.md  documentation-issue-📚.md  feature-request-🎁.md  general-issue-✨.md  update-dependecies-⚙️.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix_template.md  documentation_template.md  feature_template.md  general_template.md
.github/workflows/: cflite_pr.yml  ci.yml  create-tags-for-release.yml  docs-release.yml  init-release.yml  init_release.yml  pull_request_labeler.yml  release.yml  scorecard.yml  workflow-testing.yml
0.0.0/search/: search_index.json
0.1/: 404.html  index.html
0.1.3/: index.html
0.1.3/search/: search_index.json
0.1/search/: search_index.json
1.0.0rc1/: index.html
1.0.0rc1/search/: search_index.json
1.0.0rc11/search/: search_index.json
1.0.0rc2/search/: search_index.json
1.0.0rc3/: 404.html
1.0.0rc4/: index.html
1.0.0rc4/search/: search_index.json
1.0.0rc9/: index.html
1.1.0/: index.html
badges/: README.md
ci/: run_checks.bat  run_checks.py  run_checks_react.bat  run_checks_react.py  run_code_cov.py  run_ruff.py  run_ruff_format.py
dev_scripts/: run_all_llm_as_a_judge_tests.py
docs/: index.md
reports-frontend/: README.md  compareReport.html  evalReport.html  package-lock.json  package.json  summaryReport.html  vite.config.compare.js  vite.config.eval.js  vite.config.js  vite.config.summary.js
search/: search_index.json
simpleval/: cli_args.py  consts.py  logger.py  main.py
tools/: bookkeeping.py  run_all_llm_as_a_judge_tests.py  show_reports_for_all_llm_as_a_judge_tests.py
v1.0.0/: index.html
v1.1.1/: 404.html
(+398 files in other folders)
