[project]
name = "simpleval"
version = "1.1.1"
description = "Simple Evaluation Framework for LLM use cases"
authors = [{ name = "Roy Ben Yosef", email = "roy.benyosef@cyberark.com" }]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
dependencies = [
    "boto3>=1.42.25,<2",
    "pydantic>=2.12.5,<3",
    "tqdm>=4.67.1,<5",
    "tenacity>=9.1.2,<10",
    "colorama>=0.4.6,<0.5",
    "click>=8.3.1,<9",
    "tabulate>=0.9.0,<0.10",
    "inquirerpy>=0.3.4,<0.4",
    "litellm>=1.80.13",
    "httpcore>=1.0.9,<2",
    "google-genai>=1.57.0,<2",
    "urllib3>=2.6.3",
]

[project.urls]
Repository = "https://github.com/cyberark/simple-llm-eval"

[project.scripts]
simpleval = "simpleval.main:main"

[dependency-groups]
dev = [
    "pytest-mock",
    "mkdocs>=1.6.1,<2",
    "mkdocs-git-revision-date-plugin>=0.3.2,<0.4",
    "pandas>=2.2.3,<3",
    "xenon>=0.9.3,<0.10",
    "semver>=3.0.4,<4",
    "radon>=6.0.1,<7",
    "mike>=2.1.3,<3",
    "mkdocs-material>=9.6.14,<10",
    "mkdocs-material-extensions>=1.3.1,<2",
    "pre-commit>=4.2.0,<5",
    "pymdown-extensions~=10.15",
    "pytest-cov>=6.1.1,<7",
    "pytest-html>=4.1.1,<5",
    "pytest-metadata>=3.1.1,<4",
    "mkdocs-render-swagger-plugin>=0.1.2,<0.2",
    "ruff>=0.11.10",
]


[tool.uv]
default-groups = [
    "dev",
]

[tool.hatch.build.targets.sdist]
include = ["simpleval"]

[tool.hatch.build.targets.wheel]
include = ["simpleval"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
extend-select = ["I", "S"] # isort, flake8-bandit
# select = ["S"] # isort

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
exclude = ["__pycache__","build", "dist", "reports-frontend"]
